align review tabs correctly into layout

--- a/theming/scss/layouts/_database.scss
+++ b/theming/scss/layouts/_database.scss
@@ -1,55 +1,6 @@
 @use '../base/' as *;
 @use '../base/mixins' as *;
 
-.table-tabs {
-    @extend .fs-7;
-    @include flex-row;
-    padding-top: $C--padding-standard;
-    padding-bottom: $C--padding-standard;
-    
-    @include media-breakpoint-up(md) {
-        justify-content: center;
-    }
-
-    &__container {
-        @include flex-row;
-        width: 100%;
-        margin: 0 $C--padding-standard;
-
-        @include media-breakpoint-up(md) {
-            max-width: $C--container-width;
-            padding-right: calc(#{$C--db-side-width} + #{$C--padding-standard});
-        }
-    }
-
-    .nav-tabs {
-        width: 100%;
-
-        .nav-item {
-            @extend .fw-semibold;
-            @extend .border-bottom;
-        }
-
-        .nav-link {
-            border: none;
-            border-bottom: 4px solid $white;
-        }
-
-        .nav-link.active {
-            border-bottom-color: $C--color-green;
-        }
-
-        .nav-link svg {
-            @extend .me-1;
-            fill: $primary;
-        }
-
-        .nav-link.active svg {
-            fill: $black;
-        }
-    }
-}
-
 .content .tab-content {
     overflow: hidden;
     overflow-x: auto;
